<resources>
    <string name="app_name">hoy</string>
    <string name="title">Cursos</string>
    <string name="code">Codigo :</string>
    <string name="curso">Curso :</string>
    <string name="Carrer">Carrera :</string>
    
    
<string name="agregar">Agregar</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Mostrar">Mostrar</string>
</resources>